maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:44: error: ';' expected but 'else' found.
  } else {
    ^IslandMaze:50: error: Unmatched closing brace '}' ignored here
}
^